# OOP_LAB_4

./: CMakeLists.txt  README.md  main.cpp
include/: array.h  figure.h  rectangle.h  square.h  trapezoid.h
tests/: test.cpp
